fixed alignment

--- a/final/assets/css/page4.css
+++ b/final/assets/css/page4.css
@@ -36,7 +36,7 @@ h2 {
     flex-direction: row;
 
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .dropdown-col {
